# cian-parser

./: .env  README.md  docker-compose.yml  initial_data.csv  pyproject.toml
src/: dockerfile  main.py  media_loader.py  processor.py  start_data.json
src/cian/: crawler.py  screenshots.py
src/cian/storage/datasets/default/: 000000001.json  000000002.json  000000003.json  000000004.json  000000005.json  000000006.json  000000007.json  000000008.json  000000009.json  000000010.json  000000011.json  000000012.json  000000013.json  000000014.json  000000015.json  000000016.json  000000017.json  000000018.json  000000019.json  000000020.json  000000021.json  000000022.json  000000023.json  000000024.json  000000025.json  000000026.json  000000027.json  000000028.json  000000029.json  000000030.json  000000031.json  000000032.json  000000033.json  000000034.json  000000035.json  000000036.json  000000037.json  000000038.json  000000039.json  000000040.json  (+1290 more)
src/cian/storage/request_queues/default/: 1CHn7q1NJaOIdg0.json  1D8CZsrWlqDZRCz.json  2eYLUhrVHgHopRY.json  3jV39eNFGJba0OY.json  4t2FaFgbxZbAdAt.json  58stiegVmw3UM9j.json  5GG4UfnXd5hV5Sj.json  5eOrK0jZmdaRL0v.json  5ktlUzoK8gkjxLE.json  6xGOip1ZgelKg94.json  7svLDpCTQhEL0NE.json  82V0kThp7Kc8uVK.json  8SmWHlGLJkJ0Hz3.json  8rkfXNVoQmQUZJR.json  95bGuhPtoLdXMSD.json  A3D2gDh9eLhPXzv.json  A8f5Sl4Ib3XjsIa.json  (+82 more)
src/core/: config.py  logger.py  mongo.py  pipeline.py  schema.py
src/dev/: chech_region_count_offer.py  get_data_by_bbox.py  gpkg.py  loader_img.py  reaad_file.py
src/region/: __init__.py  schema.py
