[project]
name = "cian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "arq>=0.26.3",
    "backoff>=2.2.1",
    "crawlee[all]>=0.5.2",
    "curl-cffi>=0.7.4",
    "orjson>=3.10.15",
    "playwright>=1.49.1",
    #    "aiohttp>=3.11.11",
    #    "arq>=0.26.3",
    #    "backoff>=2.2.1",
    #    "crawlee[all]>=0.5.2",
    #    "curl-cffi>=0.7.4",
    #    "loguru>=0.7.3",
    #    "pydantic>=2.10.6",
    #    "pydantic-settings>=2.6.1",
    #    "python-dotenv>=1.0.1",
    #    "shapely>=2.0.6",
    "pydantic>=2.10.6",
    "pymongo>=4.10.1",
    "pyodbc>=5.2.0",
    "watchdog>=6.0.0",
]

[dependency-groups]

dev = [
    "chompjs>=1.3.0",
    "geopandas>=1.0.1",
    "jupyterlab>=4.3.4",
]
